# store_djangoapi

./: db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_rename_name_usuario_nome.py  0003_estoque.py  0004_pedido.py  0005_pedido_estoque.py  0006_remove_pedido_estoque.py  0007_remove_pedido_total.py
store/: settings.py  urls.py
